# madrust-uefi-skeleton

./: Cargo.toml  Makefile  README.md
src/: main.rs
