[package]
name = "uefi-app"
version = "0.1.0"
authors = ["Alberto Ruiz <aruiz@gnome.org>"]
edition = "2018"

[dependencies]
log  = {version = "0.4", default-features = false }
uefi = { git = "https://github.com/GabrielMajeri/uefi-rs.git" }
uefi-services = { git = "https://github.com/GabrielMajeri/uefi-rs.git" }
